Ported blog content

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,16 +1,20 @@
 ---
 layout: default
+paginate: 1
 ---
 <div class="entry page">
 <h1>{{ page.title }}</h1>
-<div class="nav">
-    {% for apost in site.posts %}
-
-    {% endfor %}
-    <a href="{{paginator.previous_post_path}}">Previous</a>
-</div>
-<p class="meta">{{ page.date | date_to_string }}</p>
+{% include post-pager.html %}
+<p class="meta">Posted on {{ page.date | date_to_string }} by <a href="https://twitter.com/bmf">Mike</a></p>
 <div class="post">
 {{ content }}
 </div>
+<br/>
+{% include post-pager.html %}
+<br/>
+{% include author-info.html %}
+<br>
+<p class="meta">
+    This entry was posted in {{ page.categories }} and tagged {{ page.tags }}.
+</p>
 </div>
