--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,9 @@
                       <h1 class="home"><a href="/">Home</a></h1>
                   </div>
                 </div>
+                <div class="content-container">
                 {{ content }}
+                </div>
                 <div class="footer">
                   <div class="contact">
                     <p>
