Add author info in side nav

--- a/_includes/author-info.html
+++ b/_includes/author-info.html
@@ -1,14 +1,6 @@
 <div class="author-info">
-    <div class="image">
-        <img src="/images/mike-lee.jpg" alt="Mike Lee"/>
-    </div>
-    <div class="info">
-        <h4>
-            <a href="https://twitter.com/bmf" rel="nofollow" title="Mike Lee on Twitter">
-                About Mike
-            </a>
-        </h4>
-        Mike Lee is a product engineer in the Netherlands.<br/>
-        Follow <a href="https://twitter.com/bmf" rel="nofollow" title="Mike Lee on Twitter">@bmf</a> on Twitter. If you have comments, email <a href="mailto:bmf@le.mu.rs" rel="nofollow" title="Email Mike Lee">bmf@le.mu.rs</a>. For more information about Appsterdam, check out <a href="http://appsterdam.rs" title="Appsterdam" rel="nofollow">http://appsterdam.rs</a> and follow <a href="https://twitter.com/appsterdam" rel="nofollow" title="Appsterdam on Twitter">@Appsterdam</a>.
-    </div>
+    <p>
+        If you have comments, email <a href="mailto:bmf@le.mu.rs" title="Mail Mike">bmf@le.mu.rs</a>
+        or open a issue on <a href="https://github.com/ElDragonRojo/ElDragonRojo.github.io/issues/new" title="Mur.mu.rs issue tracker">GitHub</a>.
+    </p>
 </div>
