--- a/_includes/side-nav.html
+++ b/_includes/side-nav.html
@@ -1,2 +1,22 @@
 <div class="side-nav">
+    <div class="about-mike">
+        <p>
+            Mike Lee is a product engineer in the Netherlands.
+        </p>
+        <p>
+            Mike is making games at the <a href="http://newlemurs.com" title="New Lemurs">New Lemurs</a>
+            and is the mayor of <a href="http://appsterdam.rs" title="New Lemurs">Appsterdam</a>
+        </p>
+        <p>
+            Follow <a href="https://twitter.com/bmf" title="Mike Lee is @bmf on Twitter">@bmf</a> 
+            on <a href="https://twitter.com/bmf" title="Mike Lee is @bmf on Twitter">Twitter</a>
+            and <a href="https://alpha.app.net/bmf" title="Mike Lee is @bmf on App.net">App.net</a>,
+            and <a href="https://github.com/ElDragonRojo" title="New Lemurs">@eldragonrojo on GitHub</a>.
+        </p>
+        <p>
+            If you have comments, email <a href="mailto:bmf@le.mu.rs" title="Mail Mike">bmf@le.mu.rs</a>
+            or open a issue on <a href="https://github.com/ElDragonRojo/ElDragonRojo.github.io/issues/new" title="Mur.mu.rs issue tracker">GitHub</a>.
+        </p>
+        <div class="portrait"></div>
+    </div>
 </div>
