--- a/_includes/side-nav.html
+++ b/_includes/side-nav.html
@@ -19,4 +19,9 @@
         </p>
         <div class="portrait"></div>
     </div>
+    
+    <div class="content-links">
+        <a href="/{{site.rss_path}}" class="rss" title="RSS Feed">RSS</a>
+        <a href="/{{site.atom_path}}" class="atom" title="RSS Feed">Atom</a>
+    </div>
 </div>
