--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>{{ page.title }}</title>
         <meta name="viewport" content="width=device-width">
-
-        <!-- syntax highlighting CSS -->
+        <meta charset="utf-8">
+        <title>{{ page.title }}</title>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <link rel="alternate" href="/{{site.atom_path}}" type="application/atom+xml" title="Atom"/>
+        <link rel="alternate" href="/{{site.rss_path}}" type="application/rss+xml" title="RSS"/>
         <link rel="stylesheet" href="/css/syntax.css">
-
-        <!-- Custom CSS -->
         <link rel="stylesheet" href="/css/main.css">
 
     </head>
