--- a/css/main.css
+++ b/css/main.css
@@ -356,4 +356,52 @@ h2.site-name a, h2.site-name  a:link, h2.site-name  a:active, h2.site-name a:vis
   margin-top: 30px;
 }
 
+.content-links {
+  margin-left: 30px;
+  margin-top: 20px;
+  text-align: right;
+}
+
+.content-links .atom, .content-links .rss {
+  background-image: url(/images/feed-icon-28x28.png);
+  background-repeat: no-repeat;
+  background-position: left middle;
+  background-size: auto 100%;
+  height: 28px;
+  padding: 0 0 0 22px;
+  color: #888;
+  font-family: 'Helvetica Neue', Arial, Helvetica, 'Nimbus Sans L', sans-serif;
+}
+
+.content-links .twitter {
+  background-image: url(/images/twitter-bird-light-bgs.png);
+  background-repeat: no-repeat;
+  background-position: left middle;
+  background-size: auto 100%;
+  height: 38px;
+  padding: 0 0 0 22px;
+  color: #888;
+  font-family: 'Helvetica Neue', Arial, Helvetica, 'Nimbus Sans L', sans-serif;
+}
+
+.content-links .github {
+  background-image: url(/images/github.png);
+  background-repeat: no-repeat;
+  background-position: left middle;
+  background-size: auto 100%;
+  height: 38px;
+  padding: 0 0 0 22px;
+  color: #888;
+  font-family: 'Helvetica Neue', Arial, Helvetica, 'Nimbus Sans L', sans-serif;
+}
+
+
+.content-links a, .content-links a:link {
+  text-decoration: none;  
+}
+
+.content-links .rss  {
+  margin-right: 5px;
+}
+
 
