--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,9 @@
                 <div class="header">
                     <div class="nav">
                       <h1 class="home"><a href="/">Home</a></h1>
+                      <h1 class="home"><a href="/about-me" title="About Me">About Me</a></h1>
+                      <h1 class="home"><a href="/den-blaag" title="Den Blaag">Den Blaag</a></h1>
+                      <h1 class="home"><a href="/hire-me" title="Hire Me">Hire Me</a></h1>
                   </div>
                 </div>
                 <div class="content-container">
