--- a/css/main.css
+++ b/css/main.css
@@ -40,6 +40,11 @@ table {
   font: 100%;
 }
 
+ul {
+  margin: 0;
+  padding: 0 0 0 20px;
+}
+
 /*****************************************************************************/
 /*
 /* Home
@@ -101,17 +106,30 @@ div.entry h2 a {
   text-decoration: none;
 }
 
+.site .header h1 {
+  float: left;
+  padding: 0 10px;
+}
+
+.site .header h1:hover {
+  background-color: #333333;
+}
+
 .site .header h1.title {
   display: inline-block;
   margin-bottom: 2em;
 }
 
 .site .header h1.title a {
-  color: #a00;
+  color: #333;
 }
 
 .site .header h1.title a:hover {
   color: #000;
+}
+
+.site .header h1.title a:active {
+  color: #a00;
 }
 
 .site .header a.extra {
@@ -216,7 +234,7 @@ div.entry h2 a {
   background-color: #000;
   color: #FFF;
   line-height: 39px;
-  padding-left: 30px;
+  padding-left: 10px;
 }
 
 .header .nav a, .header .nav a:link, .header .nav a:active, .header .nav a:visited {
